--- a/index.html
+++ b/index.html
@@ -18,33 +18,35 @@
         </nav>
       </header>
 
-      <article class="about-page">
+      <section class="about-page">
         <div class="information">
           <header class="greet-world">
             <h2>Hello! I'm Rushan, a Developer based in India.</h2>
           </header>
-          <div class="text-information">
-            <p>
-              I love building tools that are user-friendly, simple and
-              delightful.
-            </p>
-            <p>
-              I am a Computer Science Engineering student at Walchand Institute
-              of Technology, Solapur. Inspired by Richard Feynman's principle,
-              'What I cannot create, I do not understand,' I strive to deepen my
-              understanding through creation and innovation.
-            </p>
-            <p>
-              Passionate and driven Computer Science enthusiast, specializing in
-              Artificial Intelligence and Machine Learning. Committed to
-              delivering innovative solutions, continuous learning, and
-              impactful results. Explore my journey, achievements, and creative
-              projects showcased here.
-            </p>
-            <p>
-              I am currently looking for a new role as a cloud engineer. Hire
-              me?
-            </p>
+          <div>
+            <div class="text-information">
+              <p>
+                I love building tools that are user-friendly, simple and
+                delightful.
+              </p>
+              <p>
+                I am a Computer Science Engineering student at Walchand
+                Institute of Technology, Solapur. Inspired by Richard Feynman's
+                principle, 'What I cannot create, I do not understand,' I strive
+                to deepen my understanding through creation and innovation.
+              </p>
+              <p>
+                Passionate and driven Computer Science enthusiast, specializing
+                in Artificial Intelligence and Machine Learning. Committed to
+                delivering innovative solutions, continuous learning, and
+                impactful results. Explore my journey, achievements, and
+                creative projects showcased here.
+              </p>
+              <p>
+                I am currently looking for a new role as a cloud engineer. Hire
+                me?
+              </p>
+            </div>
             <div class="buttons">
               <a
                 href="https://www.linkedin.com/in/rushan-shaikh-150348259/"
@@ -70,7 +72,31 @@
             height="305"
           />
         </div>
-      </article>
+      </section>
+
+      <section class="projects-page">
+        <h2 class="projects-heading">
+          I have been involved in the following projects throughout my career:
+        </h2>
+
+        <div class="project-tiles">
+          <div class="first-tile">
+            <a href="blah" class="nand2tetris">rush4n/nand2tetris</a>
+            <p class="nand2tetris-desc">
+              Construct a general-purpose computer utilizing a NAND chip,
+              ultimately advancing to the most advanced computer chip, with an
+              operating system.
+            </p>
+          </div>
+          <div class="second-tile">
+            <a href="#" class="text-editor">rush4n/text-editor</a>
+            <p class="text-editor-desc">
+              a simple text editor built using fundamentals of object oriented
+              programming, data structures and data visualization in java.
+            </p>
+          </div>
+        </div>
+      </section>
     </div>
   </body>
 </html>
